--- a/src/main/resources/views/CalculationGameView.fxml
+++ b/src/main/resources/views/CalculationGameView.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="374.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="176.0" prefWidth="100.0" />
+            <HBox prefHeight="176.0" prefWidth="110.0" />
             <HBox prefHeight="123.0" prefWidth="100.0">
                <children>
                   <VBox prefHeight="106.0" prefWidth="100.0">
@@ -26,17 +26,17 @@
       </VBox>
    </right>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="374.0" prefWidth="400.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="160.0" prefWidth="500.0" />
             <Label fx:id="mathProblems" prefHeight="18.0" prefWidth="99.0" text="matheProblems" textAlignment="CENTER" />
-            <TextField fx:id="textField" />
+            <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" />
             <Label fx:id="message" prefHeight="18.0" prefWidth="265.0" text="message" />
          </children>
       </VBox>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="374.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
    <bottom>
       <VBox prefHeight="26.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -49,7 +49,7 @@
                         <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" text="score" />
                      </children>
                   </HBox>
-                  <VBox prefHeight="26.0" prefWidth="341.0" />
+                  <VBox prefHeight="26.0" prefWidth="206.0" />
                   <VBox prefHeight="26.0" prefWidth="82.0">
                      <children>
                         <Label fx:id="time" text="time" />
