--- a/src/main/resources/views/CalculationGameView.fxml
+++ b/src/main/resources/views/CalculationGameView.fxml
@@ -7,17 +7,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <right>
-      <VBox prefHeight="374.0" prefWidth="150.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="762.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="176.0" prefWidth="110.0" />
-            <HBox prefHeight="123.0" prefWidth="100.0">
+            <HBox prefHeight="449.0" prefWidth="150.0" />
+            <HBox prefHeight="591.0" prefWidth="150.0">
                <children>
-                  <VBox prefHeight="106.0" prefWidth="100.0">
+                  <VBox prefHeight="245.0" prefWidth="100.0">
                      <children>
                         <Button fx:id="processButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="59.0" text="OK" />
                         <Button fx:id="clearButton" mnemonicParsing="false" prefHeight="16.0" prefWidth="59.0" text="Löschen" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="262.0" prefWidth="150.0">
+               <children>
+                  <VBox prefHeight="95.0" prefWidth="149.0">
+                     <children>
+                        <Label fx:id="time" prefHeight="30.0" prefWidth="158.0" text="time" />
                      </children>
                   </VBox>
                </children>
@@ -26,38 +35,22 @@
       </VBox>
    </right>
    <center>
-      <VBox prefHeight="374.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="750.0" prefWidth="439.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="160.0" prefWidth="500.0" />
+            <HBox prefHeight="432.0" prefWidth="439.0" />
             <Label fx:id="mathProblems" prefHeight="18.0" prefWidth="99.0" text="matheProblems" textAlignment="CENTER" />
             <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" />
             <Label fx:id="message" prefHeight="18.0" prefWidth="265.0" text="message" />
+            <HBox prefHeight="556.0" prefWidth="439.0" />
+            <HBox prefHeight="256.0" prefWidth="439.0">
+               <children>
+                  <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" text="score" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </center>
    <left>
       <VBox prefHeight="374.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
-   <bottom>
-      <VBox prefHeight="26.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="30.0" prefWidth="600.0">
-               <children>
-                  <HBox prefHeight="26.0" prefWidth="49.0" />
-                  <HBox prefHeight="26.0" prefWidth="210.0">
-                     <children>
-                        <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" text="score" />
-                     </children>
-                  </HBox>
-                  <VBox prefHeight="26.0" prefWidth="206.0" />
-                  <VBox prefHeight="26.0" prefWidth="82.0">
-                     <children>
-                        <Label fx:id="time" text="time" />
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </bottom>
 </BorderPane>
