--- a/src/main/resources/views/CalculationGameView.fxml
+++ b/src/main/resources/views/CalculationGameView.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <right>
       <VBox prefHeight="762.0" prefWidth="150.0" BorderPane.alignment="CENTER">
          <children>
@@ -16,8 +12,8 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Button fx:id="processButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="59.0" text="OK" />
-                        <Button fx:id="clearButton" mnemonicParsing="false" prefHeight="16.0" prefWidth="59.0" text="Löschen" />
+                        <Button fx:id="processButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="81.0" text="OK" />
+                        <Button fx:id="clearButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" text="Löschen" />
                      </children>
                   </VBox>
                </children>
