--- a/src/main/resources/views/CalculationGameView.fxml
+++ b/src/main/resources/views/CalculationGameView.fxml
@@ -22,7 +22,7 @@
                <children>
                   <VBox prefHeight="95.0" prefWidth="149.0">
                      <children>
-                        <Label fx:id="time" prefHeight="30.0" prefWidth="158.0" text="time" />
+                        <Label fx:id="time" prefHeight="30.0" prefWidth="158.0" text="time" style="-fx-font-size: 20; -fx-font-weight: bold"/>
                      </children>
                   </VBox>
                </children>
@@ -31,16 +31,16 @@
       </VBox>
    </right>
    <center>
-      <VBox prefHeight="750.0" prefWidth="439.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="750.0" prefWidth="439.0" BorderPane.alignment="CENTER" style="-fx-spacing: 15">
          <children>
             <HBox prefHeight="359.0" prefWidth="280.0" />
-            <Label fx:id="mathProblems" prefHeight="18.0" prefWidth="99.0" text="matheProblems" textAlignment="CENTER" />
-            <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" />
+            <Label fx:id="mathProblems" prefHeight="18.0" prefWidth="99.0" text="matheProblems" textAlignment="CENTER" style="-fx-font-size: 35; -fx-font-weight: bold"/>
+            <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" style="-fx-font-size: 25"/>
             <Label fx:id="message" prefHeight="11.0" prefWidth="266.0" text="message" />
             <HBox prefHeight="445.0" prefWidth="280.0" />
             <HBox prefHeight="256.0" prefWidth="439.0">
                <children>
-                  <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" text="score" />
+                  <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" text="score" style="-fx-font-size: 25"/>
                </children>
             </HBox>
          </children>
