--- a/src/main/resources/views/CalculationGameView.fxml
+++ b/src/main/resources/views/CalculationGameView.fxml
@@ -6,44 +6,34 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <right>
       <VBox prefHeight="762.0" prefWidth="150.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="376.0" prefWidth="150.0" />
-            <HBox prefHeight="481.0" prefWidth="150.0">
-               <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Button fx:id="processButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="81.0" text="OK" />
-                        <Button fx:id="clearButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" text="Löschen" />
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-            <HBox prefHeight="262.0" prefWidth="150.0">
-               <children>
-                  <VBox prefHeight="95.0" prefWidth="149.0">
-                     <children>
-                        <Label fx:id="time" prefHeight="30.0" prefWidth="158.0" style="-fx-font-size: 20; -fx-font-weight: bold" text="time" />
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
-         </children>
+         <HBox prefHeight="376.0" prefWidth="150.0"/>
+         <HBox prefHeight="481.0" prefWidth="150.0">
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <Button fx:id="processButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="81.0"
+                       text="OK"/>
+               <Button fx:id="clearButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0"
+                       text="Löschen"/>
+            </VBox>
+         </HBox>
+         <HBox prefHeight="262.0" prefWidth="150.0">
+            <VBox prefHeight="95.0" prefWidth="149.0">
+               <Label fx:id="time" prefHeight="30.0" prefWidth="158.0"
+                      style="-fx-font-size: 20; -fx-font-weight: bold" text="time"/>
+            </VBox>
+         </HBox>
       </VBox>
    </right>
    <center>
       <VBox prefHeight="750.0" prefWidth="439.0" style="-fx-spacing: 15" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="359.0" prefWidth="280.0" />
-            <Label fx:id="mathProblems" prefHeight="51.0" prefWidth="317.0" style="-fx-font-size: 35; -fx-font-weight: bold" text="matheProblems" textAlignment="CENTER" />
-            <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" style="-fx-font-size: 25" />
-            <Label fx:id="message" prefHeight="11.0" prefWidth="266.0" text="message" />
-            <HBox prefHeight="445.0" prefWidth="280.0" />
-            <HBox prefHeight="256.0" prefWidth="439.0">
-               <children>
-                  <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" style="-fx-font-size: 25" text="score" />
-               </children>
-            </HBox>
-         </children>
+         <HBox prefHeight="359.0" prefWidth="280.0"/>
+         <Label fx:id="mathProblems" prefHeight="51.0" prefWidth="317.0"
+                style="-fx-font-size: 35; -fx-font-weight: bold" text="matheProblems" textAlignment="CENTER"/>
+         <TextField fx:id="textField" prefHeight="26.0" prefWidth="346.0" style="-fx-font-size: 25"/>
+         <Label fx:id="message" prefHeight="11.0" prefWidth="266.0" text="message"/>
+         <HBox prefHeight="445.0" prefWidth="280.0"/>
+         <HBox prefHeight="256.0" prefWidth="439.0">
+            <Label fx:id="score" prefHeight="18.0" prefWidth="140.0" style="-fx-font-size: 25" text="score"/>
+         </HBox>
       </VBox>
    </center>
    <left>
